# hermes-tweet

./: .dockerignore  .gitignore  .hermes-eco.json  AGENTS.md  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  __init__.py  after-install.md  context7.json  plugin.yaml  pyproject.toml  skill.json
.claude-plugin/: plugin.json
.clusterfuzzlite/: Dockerfile  build.sh  project.yaml  requirements.in  requirements.txt
.codex-plugin/: plugin.json
.github/: CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  actionlint.yaml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  clusterfuzzlite.yml  codeql.yml  hol-plugin-scanner.yml  publish.yml  scorecard.yml
dashboard/: manifest.json
docs/: CONTEXT7.md  DISCOVERABILITY_AUDIT.md  ECOSYSTEM.md  GITHUB_METADATA.md  HERMES_SURFACES.md  INTEGRATION_PATTERNS.md  MERGE_ENABLEMENT.md  OBSERVABILITY.md  OPERATOR_HANDOFF.md  PUBLICATION_CHECKLIST.md  SUBMISSION_READINESS.md
fuzz/: __init__.py  normalization_fuzzer.py
hermes_tweet/: __init__.py  catalog.py  catalog_data.json  client.py  plugin.yaml  schemas.py  tools.py
hermes_tweet/skills/: __init__.py
hermes_tweet/skills/hermes-tweet/: SKILL.md  skill-card.md
hermes_tweet/skills/hermes-tweet/references/: endpoint-contract.md
registries/ask/hermes-tweet/: SKILL.md
scripts/: build_catalog.py  check_hermes_agent_compat.py  check_license_headers.py  check_public_links.py  check_public_safety.py  check_reproducible.sh  public_surfaces.py
skills/hermes-tweet/: SKILL.md  skill-card.md
skills/hermes-tweet/references/: endpoint-contract.md
tests/: test_build_catalog.py  test_catalog.py  test_client.py  test_hermes_agent_compat.py  test_license_headers.py  test_metadata.py  test_plugin.py  test_public_links.py  test_public_safety.py  test_public_surfaces.py  test_submission_readiness.py  test_tools.py
tests/fixtures/route_rejection_phrases/: agent_runtime.txt  marketplaces_client_workflows.txt  marketplaces_core.txt  marketplaces_people_governance.txt  marketplaces_specialized.txt  safety_duplicates.txt
